--- a/css/style.css
+++ b/css/style.css
@@ -560,6 +560,7 @@ padding: 100px 0;
     padding: 30px 50px;
     box-shadow: 0px 0px 30px #3333331c;
     margin: 0 50px;
+    background: #ffffffcc;
   }
   .service-section h1 {
     font-weight: 700;
